Styling updates to Fan detail page

--- a/app/views/fans/new.html.erb
+++ b/app/views/fans/new.html.erb
@@ -52,6 +52,51 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
+              <%= f.label :location %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :location, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
+              <%= f.label :facebook_profile_url %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :facebook, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
+              <%= f.label :twitter_profile_url %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :twitter, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
+              <%= f.label :lastfm_profile_url %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :lastfm, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
+              <%= f.label :bio %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_area :bio, :class => "form-control", :style => "height: 200px" %>
+            </div>
+          </div>
+          
           <div class="text-right" style="margin:1em;">
             <%= f.submit "Create my account", class: "btn btn-primary" %>
           </div>
