--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -244,24 +244,53 @@ a.brand {
   line-height: 1.1em;
 }
 
-.edit-my-profile {
+.profile-subhead {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
-  font-size: 18px;
+  font-size: 24px;
   display: inline-block;
   line-height: 1.1em;
-  float:right;
 }
 
-.edit-my-profile {
+a.profile-edit {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  display: inline-block;
+  line-height: 1.1em;
+  color: #5AADFF;
+}
+
+a.profile-edit:hover, a.profile-subhead:hover {
+  color: #5AADFF;
+  text-decoration: underline;
+  background-color: inherit;
+}
+
+.profile-copy {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
-  display: inline-block;
-  line-height: 1.1em;
-  float:right;
+  letter-spacing: 0em;
+  word-spacing: 0em;
+  line-height: 1.4;
+  padding-bottom: 1em;
+  color: black;
+}
+
+a.profile-copy {
+  background-color: inherit;
+  color: #5AADFF;
+  text-decoration: none;
+}
+
+a.profile-copy:hover {
+  background-color: inherit;
+  color: #5AADFF;
+  text-decoration: underline;
 }
 
 a.artist-name {
@@ -295,7 +324,6 @@ a.artist-name:hover {
   padding-bottom: 1em;
   color: black;
   display:block;
-  /*padding: 15px;*/
 }
 
 .btn.luv_btn {
