--- a/app/views/fans/edit.html.erb
+++ b/app/views/fans/edit.html.erb
@@ -54,6 +54,57 @@
           </div>
         </div>
 
+        <!-- <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <hr>
+          </div>
+        </div> -->
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :location %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :location, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :facebook_profile_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :facebook, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :twitter_profile_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :twitter, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :lastfm_profile_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :lastfm, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :bio %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_area :bio, :class => "form-control", :style => "height: 200px" %>
+          </div>
+        </div>
+
         <div class="text-right" style="margin:1em;">
           <%= f.submit "Update my account", class: "btn" %>
         </div>
@@ -62,7 +113,6 @@
 
       <br>
       <br>
-      
 
     </div>
   </div>
