--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -540,7 +540,23 @@ a.btn-more-artists {
   color: white;
 }
 
-p.btn-more, p.btn-more a {
+.btn-more {
+  width: 100%;
+}
+
+p.btn-more {
+  width: 100%;
+  background-color: #4A4A4A;
+  text-align: center;
+  padding: 1em;
+  margin-top: 1em;
+}
+
+p.btn-more a {
+  color: white;
+}
+
+p.btn-more {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
@@ -557,23 +573,6 @@ ul.news {
   line-height: 1.5;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-}
-
-p.btn-more a {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 1.4;
-  color: white;
-  text-transform: uppercase;
-  background-color: #4A4A4A;
-  border-radius: 0;
-  border: none;
-  margin-top: 1em;
-  padding: 20px;
-  text-align: center;
-  max-width: 100%;
 }
 
 #map {
