--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -199,7 +199,7 @@
     </div>
   </div>
 
-  <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
+  <p class="btn-more"><a href="#">MORE <i class="fa fa-chevron-circle-down"></i></a></p>
 
 </div>
 
