--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -24,7 +24,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-md-12 text-center">
-      <h2 class="trending">Trending Artists</h2>
+      <h2 class="trending">Artists</h2>
       <br>
     </div>
   </div>
