--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -117,16 +117,19 @@
   </div>
 </div>
 
-<% if current_fan %>
+<% if current_fan || current_artist %>
 <div class="container-full subhead">
   <div class="row">
     <h2>MERCH</h2>
   </div>
 </div>
+<% if current_artist == @artist %>
+  <%= link_to 'ADD MORE MERCH', new_product_path, class: "container-full" %>
+<% end %>
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <% @products.each do |product| %>
+        <% @artist.products.each do |product| %>
       <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= product.image_url %>);background-size:cover;">
       <%= link_to product.title, product, :class => "artist-name force-to-bottom" %>
       </div>
@@ -136,8 +139,7 @@
 </div>
 <% end %>
 
-
-  <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
+<p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
 
 </div>
 
