--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -25,6 +25,24 @@
 </div>
 </div>
 </div>
-<p><b><%= number_to_currency(total, :unit => '$') %></b></p>
+
 <% end %>
-<%= image_tag("checkout-logo-medium.png")%>
+
+<%= form_tag charges_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    <label class="amount">
+      <span><p><b><%= number_to_currency(total, :unit => '$') %></b></p></span>
+    </label>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="PURCHASE YOUR MERCH"
+          data-amount=""
+          data-locale="auto"></script>
+<% end %>
