fixed css error 2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -218,7 +218,7 @@ a.brand {
   width: 100%;
   height: 75px;
   line-height: 1.1em;
-  padding: 0.25em;rail;
+  padding: 0.25em;
   overflow: hidden;
 }
 
@@ -406,7 +406,7 @@ p.filterby {
   margin-top: 1em;
   color: #black;
   background: #ffac5a;
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .note:before {
