Styled tour dates

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -335,19 +335,6 @@ a.artist-name:hover {
   margin-bottom: 15px;
 }
 
-.tourdates {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 14px;
-  text-transform: none;
-  text-decoration: none;
-  letter-spacing: 0em;
-  word-spacing: 0em;
-  line-height: 1.4;
-  color: black;
-}
-
 .img-responsive {
   display: inline-block;
   max-width: 100%;
@@ -355,19 +342,34 @@ a.artist-name:hover {
   margin: 0;
 }
 
+.tourcity {
+  font-family: 'Roboto', sans-serif;
+  font-style: medium;
+  font-weight: 500;
+  font-size: 16px;
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+}
+
+.tourdates {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+}
+
 .venue {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 300;
-  font-size: 12px;
+  font-size: 14px;
   text-transform: none;
   text-decoration: none;
-  letter-spacing: 0em;
-  word-spacing: 0em;
-  line-height: 1.4;
   color: #505050;
-  padding-top: -0.25em;
-  margin-left: 1em;
 }
 
 p.venue a {
@@ -383,8 +385,6 @@ p.venue a {
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
-  letter-spacing: 0em;
-  word-spacing: 0em;
   line-height: 1.4;
   color: #505050;
   line-height: 2;
@@ -507,6 +507,7 @@ input.btn:hover {
   color: white;
   text-transform: uppercase;
   background-color: #4A4A4A;
+  width: 100%;
 }
 
 .btn.ticket-btn:hover {
@@ -578,6 +579,7 @@ ul.news {
 #map {
   height: 350px;
   width: 100%;
+  margin-top: 1em;
 }
 
 .control-label label {
