--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -65,7 +65,7 @@
 
 </div>
 
-<div class="container-full subhead">
+<div class="container-full subhead" style="">
   <div class="row">
     <h2>TOUR DATES</h2>
   </div>
@@ -73,6 +73,7 @@
 
 <div class="container-fluid">
   <div class="row">
+
     <div class="col-xs-12 col-md-4">
       <div id="map"></div>
       <script>
@@ -85,24 +86,24 @@
         }
       </script>
     </div>
-    <div class="col-xs-12 col-md-4">
-     <h3>Next Stop</h3>
-     <hr>
-     <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a>
 
-   </div>
-    <div class="col-xs-12 col-md-4">
-      <h3>Upcoming Stops</h3>
+    <div class="col-xs-12 col-md-4" style="margin-top:1em;">
+      <h3>Upcoming Tour Stops</h3>
       <hr>
-      <%@json['response']['gigs'].each do |x| %>
-      <p class="tourdates"><%= x["venue"]["name"] %></p>
-       <%= x["venue"]["location"]["city"] %>
-            <%= x["startDate"].to_time.strftime("%A, %b %d at %I %p")%>
+      <% @json['response']['gigs'].each do |x| %>
+      <p><span class="tourcity"><%= x["venue"]["location"]["city"] %> </span><span class="venue"><%= x["venue"]["name"] %></span><span class="tourdates"> / <%= x["startDate"].to_time.strftime("%b %d")%></span></p>
 
       <!-- <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a -->
         <% end %>
 
     </div>
+
+    <div class="col-xs-12 col-md-4" style="margin-top:1em;">
+     <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a>
+
+    </div>
+
+
   </div>
 </div>
 
