--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -3,7 +3,7 @@
 <% if current_fan %>
 <div class="container-full subhead-home">
   <div class="row">
-    <h2>LOVED ARTISTS</h2>
+    <h2>Luv'd Artists</h2>
   </div>
 </div>
 
@@ -21,12 +21,9 @@
 </div>
 <% end %>
 
-<div class="container-fluid">
+<div class="container-full subhead-home">
   <div class="row">
-    <div class="col-xs-12 col-md-12 text-center">
-      <h2 class="trending">All Artists</h2>
-      <br>
-    </div>
+      <h2>All Artists</h2>
   </div>
 </div>
 
