hid test keys for stripe

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,5 +29,5 @@
 <% end %>
 
 <% if current_artist %>
-<%= link_to 'Edit', edit_product_path(@product) %> <% end %> <p>
-<%= link_to 'Back', products_path %></p>
+<%= link_to 'Edit', edit_product_path(@product) %>
+<% end %>
