--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,83 @@
-<%= render 'form' %>
+<div class="container-fluid">
+  <div class="row">
+
+    <%= form_for(@product) do |f| %>
+      <% if @product.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+
+          <ul>
+          <% @product.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
+        <h1>Add a Product</h1>
+        <hr>
+      </div>
+
+      <div class="col-xs-12 col-md-6 col-md-offset-3">
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :title %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :title, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :description %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_area :description, :class => "form-control", :style => "height: 200px" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :image_url %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :image_url, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :price %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.number_field :price, :class => "form-control", :step => 0.01 %>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-xs-4 control-label">
+            <%= f.label :category %>
+          </div>
+          <div class="col-xs-8" style="margin-bottom:1em;">
+            <%= f.text_field :category, :class => "form-control" %>
+          </div>
+        </div>
+
+        <div class="text-right" style="margin:1em;">
+          <%= f.submit "List my Product", class: "btn" %>
+        </div>
+
+      </div>
+
+    <% end %>
+
+    <br>
+    <br>
+
+  </div>
+</div>
 
 <%= link_to 'Back', products_path %>
