--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <% if current_fan %>
-<div class="container-full subhead-home">
+<div class="container-full subhead-home-1">
   <div class="row">
     <h2>Luv'd Artists</h2>
   </div>
