--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -110,22 +110,28 @@
 </div>
 
 <% if current_fan || current_artist %>
-<div class="container-full subhead">
-  <div class="row">
-    <h2>MERCH</h2>
+  <div class="container-full subhead">
+    <div class="row">
+      <h2>MERCH</h2>
+    </div>
   </div>
-</div>
+
 <% if current_artist == @artist %>
   <%= link_to 'ADD MORE MERCH', new_product_path, class: "container-full" %>
 <% end %>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-md-12">
-        <% @artist.products.each do |product| %>
-      <div class="col-xs-6 col-md-3 artist-container" style="background:url(<%= product.image_url %>);background-size:cover;">
-      <%= link_to product.title, product, :class => "artist-name force-to-bottom" %>
-      </div>
+
+<div class="container-full">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+      <% @artist.products.each do |product| %>
+        <div class="col-xs-6 col-md-3 text-center">
+
+          <%= link_to image_tag(product.image_url, :class => "img-200"), product %><br>
+          <p class="merch-price">$<%= product.price %><%= link_to product.title, product, :class => "merch-title" %></p>
+        </div>
       <% end %>
+
     </div>
   </div>
 </div>
