--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,62 +1,53 @@
-<p id="notice"><%= notice %></p>
 
-<div class="container-fluid">
-  <div class="row">
+<div class="container" style="margin-bottom: 2em">
+	<h1 style="margin-bottom: 1em">Your Cart</h1>
 
-    <div class="col-xs-12 col-md-6">
-
-			<h1>Your Cart</h1>
-
-			<% if @cart.empty? %>
-				<p>Your cart is currently empty</p>
-			<% else %>
-			  <%= link_to "Empty Cart", cart_clear_path %>
-			<% end %>
-
-			<br><br><br>
-
+  <table class="table table-striped">
+    <thead>
+    	<tr>
+        <th>Product Title</th>
+        <th>Quantity</th>
+				<th><span class="pull-right">Price</span></th>
+      </tr>
+    </thead>
+    <tbody>
 			<% total = 0 %>
-
 			<% @cart.each do | id, quantity | %>
-			<% product = Product.find_by_id(id) %>
-			<% next if product.nil? %>
+				<% product = Product.find_by_id(id) %>
+				<% next if product.nil? %>
+      <tr>
+        <td><%= product.title %></td>
+        <td><%= quantity %></td>
+				<td><span class="pull-right"><%= number_to_currency(product.price, :unit => '$') %></span></td>
+      </tr>
+			<% total += quantity * product.price %>
+		<% end %>
+    </tbody>
+  </table>
 
-			<div class="container-fluid">
-			  <div class="row">
-					<div class="col-md-3">
+<%= form_tag charges_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
 
-								<%= image_tag product.image_url, :class => "img-100" %>
-
-								<%= product.title %><br>
-							  <%= number_to_currency(product.price, :unit => '$') %><br>
-							  Quantity: <%= quantity%><br>
-
-							  <% total += quantity * product.price %>
-
-						<% end %>
-					</div>
-				</div>
-			</div>
-
-			<%= form_tag charges_path do %>
-			  <article>
-			    <% if flash[:error].present? %>
-			      <div id="error_explanation">
-			        <p><%= flash[:error] %></p>
-			      </div>
-			    <% end %>
-			    <label class="amount">
-			      <span><p><b><%= number_to_currency(total, :unit => '$') %></b></p></span>
-			    </label>
-			  </article>
-
-			  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-			          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-			          data-description="PURCHASE YOUR MERCH"
-			          data-amount=""
-			          data-locale="auto"></script>
-			<% end %>
-
-		</div>
-	</div>
+<span class="pull-right" style="margin-top: 2em">
+	<p class="text-right"><b>Total: <%= number_to_currency(total, :unit => '$') %></b>
+	</p>
+	<p class="text-right">
+		<script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+										data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+										data-description="PURCHASE YOUR MERCH"
+										data-amount=""
+										data-locale="auto"></script>
+	</p>
+	<% if @cart.empty? %>
+	<h3 style="margin-top: 5em; margin-bottom: .5em">Your cart is currently empty</h3>
+	<% else %>
+	<h3 style="margin-top: 5em; margin-bottom: .5em"><%= link_to "Empty Cart", cart_clear_path %></h3>
+	<% end %>
+	</span>
+<% end %>
 </div>
