--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -558,6 +558,12 @@ a.btn-loggedin {
   border-radius: 0;
 }
 
+a.btn-loggedin:hover {
+  background-color: #eee;
+  color: black;
+  text-decoration: none;
+}
+
 .btn a {
   color: black;
 }
